# ai-policy-auditor

./: .env.example  .gitignore  .nojekyll  Dockerfile  LICENSE  README.md  _config.yml  dashboard.html  patch_security.py  pyproject.toml  requirements.txt
.github/: SECURITY.md
.github/workflows/: ci.yml  codeql.yml
src/: __init__.py  cli.py
src/analyser/: gap_analyser.py
src/api/: app.py
src/frameworks/: eu_ai_act.yaml  iso_42001.yaml  loader.py  nist_ai_rmf.yaml
src/ingest/: document.py
src/llm/: enricher.py
src/mapper/: control_mapper.py
src/output/: reporter.py
tests/fixtures/: sample_model_card.md
tests/unit/: test_ingest.py
